# TODay

./: .clangd  .gitignore  flake.nix  meson.build
include/: mainwindow.h
src/: main.cpp
subprojects/libtoday/: meson.build
subprojects/libtoday/include/today/: common.h
subprojects/libtoday/include/today/todotask/: model.h  todotask.h
subprojects/libtoday/src/todotask/: model.cpp  todotask.cpp
